--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=JWTDb;Integrated Security=True"
+    "DefaultConnection": "Data Source=.;Initial Catalog=JWTDb;Integrated Security=True"
   },
     "Logging": {
         "LogLevel": {
@@ -13,6 +13,6 @@
         "Key": "40p8RdaWdDfZHUDdRufZt3P4p4QPVYujQxc5irZa/oE=",
         "Issuer": "DotnetSecuerApi",
         "Audinece": "DotnetSecuerApiUser",
-        "DurationInMinutes": 1
+        "DurationInMinutes": 30
     }
 }
