--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=JWTDb;Integrated Security=True"
+    "DefaultConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=JWTDb;Integrated Security=True"
   },
     "Logging": {
         "LogLevel": {
